assets/css/styles.css
/* ... */
.botiga-desktop-offcanvas-menu .botiga-dropdown .sub-menu.toggled {
  float: none !important;
  display: block !important;
  height: auto;
  overflow: visible;
}

.botiga-desktop-offcanvas-menu .botiga-dropdown .sub-menu.toggled .botiga-dropdown-link {
  background-color: transparent;
}

@media screen and (max-width: 1024px) {
  .botiga-offcanvas-menu .botiga-dropdown .botiga-dropdown-ul .botiga-dropdown-ul {
    -webkit-transform: none;
            transform: none;
    opacity: 1;
  }
}

.botiga-offcanvas-menu.toggled .menu {
  display: block;
}

body.mobile-menu-visible {
  overflow-y: hidden;
}

body.mobile-menu-visible:before {
  content: '';
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 99999;
}

.menu-toggle {
  width: 28px;
  position: relative;
  cursor: pointer;
  display: inline-block;
}

.menu-toggle i,
.menu-toggle svg {
  width: 28px !important;
  height: 20px !important;
}

/* Secondary & Footer copyright navigation  */
.secondary-navigation:not(.bhfb-navigation).botiga-dropdown {
  width: auto;
}

.secondary-navigation:not(.bhfb-navigation).botiga-dropdown .menu > .botiga-dropdown-li {
  margin-right: 20px;
}

.secondary-navigation:not(.bhfb-navigation).botiga-dropdown .menu > .botiga-dropdown-li:last-child {
  margin-right: 0;
}

.secondary-navigation:not(.bhfb-navigation).botiga-dropdown .menu > .botiga-dropdown-li > .botiga-dropdown-link {
  position: relative;
  padding-top: 0;
  padding-bottom: 0;
}

.secondary-navigation:not(.bhfb-navigation).botiga-dropdown .menu > .botiga-dropdown-li > .botiga-dropdown-link:after {
  content: '';
  width: 100%;
  height: 15px;
  position: absolute;
  left: 0;
  top: 100%;
}

.secondary-navigation:not(.bhfb-navigation).botiga-dropdown .menu > .botiga-dropdown-li .ws-svg-icon {
  position: relative;
  top: -2px;
  width: 0.75em;
  height: 0.75em;
  margin-left: 7px;
}

.secondary-navigation:not(.bhfb-navigation).botiga-dropdown .menu > .botiga-dropdown-li > .botiga-dropdown-ul {
  -webkit-transform: translate3d(0, 30px, 0);
          transform: translate3d(0, 30px, 0);
}

.secondary-navigation:not(.bhfb-navigation).botiga-dropdown .menu > .botiga-dropdown-li > .botiga-dropdown-ul .botiga-dropdown-li .botiga-dropdown-link {
  padding: 14px 0;
}

.secondary-navigation:not(.bhfb-navigation).botiga-dropdown .menu > .botiga-dropdown-li:hover > .botiga-dropdown-ul {
  -webkit-transform: translate3d(0, 15px, 0);
          transform: translate3d(0, 15px, 0);
}

.header-elements:nth-child(1) ul li:first-child a,
.footer-copyright-elements:nth-child(1) ul li:first-child a {
  padding-left: 0;
}

.header-elements:nth-child(2) ul li:last-child a,
.footer-copyright-elements:nth-child(2) ul li:last-child a {
  padding-right: 0;
}

.footer-copyright-elements:nth-child(2) ul {
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

/* Top Bar Mobile Navigation */
.top-bar .top-bar-mobile-navigation.header-item {
  margin-right: 0;
}

.top-bar .top-bar-mobile-navigation.header-item + .secondary-navigation {
  display: none;
}

.top-bar .top-bar-mobile-navigation.header-item + .secondary-navigation + .header-item {
  margin-left: 25px;
}

@media screen and (min-width: 1025px) {
  .top-bar .top-bar-mobile-navigation.header-item {
    display: none;
  }
  .top-bar .top-bar-mobile-navigation.header-item + .secondary-navigation {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  .top-bar .top-bar-mobile-navigation.header-item + .secondary-navigation + .header-item {
    margin-left: 0;
  }
}

@media screen and (max-width: 1024px) {
  .top-bar .top-bar-mobile-navigation.header-item {
    z-index: 1000;
  }
}

/* Header
--------------------------------------------- */
#masthead .main-navigation {
  font-size: var(--bt-font-size-header-menu, 16px);
}

.site-header {
  background-color: #fff;
  position: relative;
  z-index: 999;
}

.site-header a {
  -webkit-transition: ease color 300ms;
  transition: ease color 300ms;
}

.site-header a svg {
  -webkit-transition: ease stroke 300ms, ease fill 300ms;
  transition: ease stroke 300ms, ease fill 300ms;
}

.site-header-inner {
  padding-top: 15px;
  padding-bottom: 15px;
}

.botiga-offcanvas-menu,
.mobile-header {
  display: none;
}

.mobile-header-item {
  margin-bottom: 30px;
}

.mobile-header-item:last-of-type {
  margin-bottom: 0;
}

.mobile-header-item .align-right {
  text-align: right;
}

.mobile-header-item .header-item .ws-svg-icon {
  width: 24px;
  height: 24px;
}

@media (max-width: 1024px) {
  .bottom-header-row,
  .site-header {
    display: none;
  }
  .mobile-header {
    display: block;
    padding-top: 15px;
    padding-bottom: 15px;
  }
  .mobile-header .align-right {
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
    text-align: right;
  }
  .mobile-header .align-center {
    text-align: center;
  }
  .botiga-offcanvas-menu {
    display: block;
  }
}

.site-title {
  font-size: 20px;
  font-size: 1.25rem;
  margin: 0;
}

.site-title a,
.site-title a:visited {
  color: #212121;
}

.site-description {
  margin: 5px 0 0;
}

.header-elements {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.header_layout_1 .header-elements,
.header_layout_2 .header-elements {
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

.header_layout_2 .row {
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.header_layout_2 .menu-col {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}

.header_layout_2 .menu-center .botiga-dropdown > div > ul {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
/* ... */

